--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<h1>Edit a UFO sighting!</h1>
-		<form action="/sighting/<%= sighting.index %>?_method=PUT" method="POST">
+		<form action="/sighting/<%= index %>?_method=PUT" method="POST">
 			<label for="month">Text:</label><br />
 			<input type="text" id="text" name="text" /><br />
 
